kubernetes/manifests/backstage-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-backend
  namespace: backstage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backstage-backend
  ports:
    - name: http
      port: 7007
      targetPort: http
