kubernetes/manifests/backstage-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-frontend
  namespace: backstage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backstage-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
